--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -5,7 +5,7 @@
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #000000;
+    color: #6200FF;
     font-size: 72pt;
     text-decoration: none;
 }
