--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,6 +14,7 @@
 {% endif %}
                 <h1><a href="/">Cool blog</a></h1>
             </div>
+            <img src="https://i.pinimg.com/564x/ed/9d/df/ed9ddf9742bcedcb6224911e51b38133--cute-frogs-funny-frogs.jpg" alt="frog" width="250" height="250" hspace="50">
             <div class="content container">
                 <div class="row">
                     <div class="col-md-8">
